log

ju., 17 de ago. de 2023 10:11:06: 
 tests:  0|7
total_score: 0/70
ac13143
ju., 17 de ago. de 2023 10:13:14: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
58f63de
ju., 17 de ago. de 2023 16:04:42: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
110df3c
ju., 17 de ago. de 2023 16:14:44: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
ju., 17 de ago. de 2023 16:17:37: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
7b499f2
ju., 17 de ago. de 2023 16:19:44: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
5ebf5d8
ju., 17 de ago. de 2023 16:31:50: 
 exercises.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'checkSorted':
exercises.c:82:5: error: expected ')' before '{' token
     {
     ^
exercises.c:85:3: error: expected expression before '}' token
   }
   ^
exercises.c:77:7: error: unused variable 'descendente' [-Werror=unused-variable]
   int descendente;
       ^~~~~~~~~~~
exercises.c:76:7: error: unused variable 'ascendente' [-Werror=unused-variable]
   int ascendente;
       ^~~~~~~~~~
exercises.c: In function 'filterEvenNumbers':
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
exercises.c: In function 'checkSorted':
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1fe7ac5
ju., 17 de ago. de 2023 16:35:27: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'checkSorted':
exercises.c:82:5: error: expected ')' before '{' token
     {
     ^
exercises.c:85:3: error: expected expression before '}' token
   }
   ^
exercises.c: In function 'filterEvenNumbers':
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
de61420
ju., 17 de ago. de 2023 16:36:48: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
876e239
ju., 17 de ago. de 2023 16:38:30: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|5
total_score: 20/70
950bcca
ju., 17 de ago. de 2023 16:41:18: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|5
total_score: 20/70
8730667
ju., 17 de ago. de 2023 16:42:04: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d4876c7
ju., 17 de ago. de 2023 16:45:09: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
7370c4e
ju., 17 de ago. de 2023 16:51:56: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
7b60a11
vi., 18 de ago. de 2023  0:14:22: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9b66552
vi., 18 de ago. de 2023  0:37:09: 
 exercises.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:66:8: error: 'numPares' undeclared (first use in this function)
     if(numPares == NULL)
        ^~~~~~~~
exercises.c:66:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:83:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   newSize = cont;
           ^
exercises.c:63:8: error: unused variable 'NumPares' [-Werror=unused-variable]
   int *NumPares = (int*)malloc(cont *sizeof(int));
        ^~~~~~~~
exercises.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
f33ff4a
vi., 18 de ago. de 2023  0:37:47: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'filterEvenNumbers':
exercises.c:83:11: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   newSize = cont;
           ^
cc1.exe: all warnings being treated as errors
Compilation failed
428cf41
vi., 18 de ago. de 2023  0:38:33: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
10549dd
vi., 18 de ago. de 2023  0:53:59: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:1:0:
exercises.c: In function 'mergeSortedArrays':
exercises.c:104:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
0c484ac
vi., 18 de ago. de 2023  0:58:58: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:1:0:
exercises.c: In function 'mergeSortedArrays':
exercises.c:104:5: error: expected ';' before '}' token
     }
     ^
exercises.c:116:5: error: expected ';' before 'j'
     j++;
     ^
Compilation failed
fc6a183
vi., 18 de ago. de 2023  1:01:26: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:1:0:
exercises.c: In function 'mergeSortedArrays':
exercises.c:106:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
0417c80
